--- a/src/index.scss
+++ b/src/index.scss
@@ -1,29 +1,157 @@
 @import "node_modules/bootswatch/dist/zephyr/variables"; 
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "node_modules/bootswatch/dist/zephyr/bootswatch"; 
- 
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+@font-face {
+  font-family: 'Nectarine';
+  src: url('src/assets/fonts/Nectarine DEMO.ttf') format('truetype');
+}
+
+
+$bg-light-font-night: #FCF6F2;
+$bg-night: #191970;
+$font-light: #2454FF;
+$title-icons-light: #FE4C00;
+$title-icons-night: #FFC40C;
+$font: "Raleway", sans-serif;
+$title-font: 'Nectarine';
+
 
 /* Styles pour le thème jour */
 body {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: $bg-light-font-night;
+    color: $font-light;
+    font-family: $font;
+    margin: 1.2%;
 }
 
 /* Styles pour le thème nuit */
-html.nuit body{
-    background-color: #191970;
-    color: #ffffff;
-}
-html.nuit .gold{
-    background-color: #191970;
-    color: #FFC40C;
+html.nuit body {
+    background-color: $bg-night;
+    color: $bg-light-font-night;
 }
 
-.NAV{
-    display: flex;
-    justify-content: space-between;
+html.nuit .gold {
+    background-color: $bg-night;
+    color: $title-icons-night;
 }
+
+
+/* START NAVBAR */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-right: 10px;
+  font-size: 1.2em;
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex: 1;
+  width: 100%;
+}
+
+.nav-links {
+  p {
+    margin: 0 200px;
+  }
+
+  img {
+    width: 45%;
+    margin-left: 6%;
+  }
+}
+
+.btn-dropdown {
+  padding-right: 10%;
+}
+
+.log {
+  color: $title-icons-light;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  font-family: $font;
+  font-size: 1em;
+}
+
+.log:hover {
+  background-color: transparent;
+  border: none;
+  color: $title-icons-light;
+}
+
+.theme-toggler {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  font-size: 1.6em;
+  padding-right: 8px;
+}
+/* END NAVBAR */
+
+
+
+
+/* START FOOTER */
+.footer {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+
+  p {
+    margin-top: 2%;
+  }
+}
+
+.top-footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo-footer {
+  width: 15%;
+}
+
+.link-form-footer {
+  color: $title-icons-light;
+  font-weight: bold;
+}
+
+.pages-footer {
+  margin-top: 2%;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.links-footer {
+  margin-top: 2%;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+}
+
+.social-icons {
+  color: $title-icons-light;
+  padding: 0;
+  font-size: 1.5em;
+}
+/* END FOOTER */
+
 
