opendys + btn accessibility OK

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,20 @@
   src: url('src/assets/fonts/Nectarine DEMO.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'OpenDyslexic';
+  src: url('src/assets/fonts/OpenDyslexic3-Regular.ttf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'OpenDyslexic';
+  src: url('src/assets/fonts/OpenDyslexic3-Bold.ttf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 
 $bg-light-font-night: #FCF6F2;
 $bg-night: #191970;
@@ -20,6 +34,21 @@ $title-icons-light: #FE4C00;
 $title-icons-night: #FFC40C;
 $font: "Raleway", sans-serif;
 $title-font: 'Nectarine';
+
+/* START OPENDYS STYLES */
+body.dyslexic {
+  font-family: 'OpenDyslexic';
+}
+
+.toggle-btn.dyslexic {
+  font-family: 'OpenDyslexic';
+  font-size: 50%;
+}
+
+.log.dyslexic {
+  font-family: 'OpenDyslexic';
+}
+/* END OPENDYS STYLES */
 
 
 /* LIGHT THEME STYLES */
@@ -40,6 +69,89 @@ html.nuit .gold {
     background-color: $bg-night;
     color: $title-icons-night;
 }
+
+html.nuit .sidebar {
+  background-color: $bg-night;
+  color: $title-icons-night;
+
+  li {
+    padding: 10px;
+    border-bottom: 1px solid $bg-light-font-night;
+  }
+}
+
+/* START SIDEBAR */
+.app-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100%;
+  position: relative;
+}
+
+.sidebar {
+  width: 250px;
+  height: 20%;
+  position: fixed;
+  top: 50%;
+  right: -250px;
+  background-color: $bg-light-font-night;
+  color: $title-icons-light;
+  transform: translateY(-50%);
+  transition: left 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sidebar.active {
+  right: 0;
+}
+
+.toggle-btn {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  background-color: $title-icons-light;
+  color: $bg-light-font-night;
+  border: none;
+  padding: 0.7%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 28%;
+  width: 1%;
+  border-radius: 10px 0 0 10px;
+  text-align: center;
+  writing-mode: vertical-lr;
+  text-orientation: upright;
+  font-family: $font;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+.toggle-btn:focus {
+  outline: none;
+}
+
+.toggle-btn.nuit {
+  background-color: $title-icons-night;
+  color: $bg-night;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  padding: 10px;
+  border-bottom: 1px solid $font-light;
+}
+
+/* END SIDEBAR */
 
 
 /* START NAVBAR */
@@ -209,8 +321,6 @@ html.nuit .gold {
   padding-right: 8px;
 }
 /* END NAVBAR */
-
-
 
 
 /* START FOOTER */
